# discord-pokeguess

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
scripts/: download_images.py  make_hidden_revealed.py
src/: main.py
src/controllers/: __init__.py  event_logger_controller.py  guess_controller.py  meta_controller.py  status_controller.py  sync_controller.py
src/models/: Status.py  guesser.py  pokemon.py
src/services/: guesser_service.py  image_service.py  pokedex_service.py
src/views/: guess_view.py  meta_view.py  status_view.py
