[project]
name = "discord-pokeguess"
version = "0.2.0"
authors = [{ name = "Apollo-Roboto", email = "Apollo_Roboto@outlook.com" }]
description = "Who's That Pokemon! "
readme = "README.md"
license = "MIT"
keywords = ["Discord", "Bot", "Pokemon"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv==0.21.0",
    "requests==2.30.0",
    "discord.py==2.2.3",
    "pillow==10.0.1",
    "zalgo-text==0.6",
    "Levenshtein==0.20.8",
    "prometheus-client==0.20.0",
    "discord-ext-prometheus==0.2.0",
]

[project.optional-dependencies]
dev = ["black", "pylint"]

[project.urls]
"Source" = "https://github.com/Apollo-Roboto/discord-pokeguess"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./src"]
